# opaquepp

./: CMakeLists.txt  LICENSE.txt  README.md
opaque_rust/: Cargo.toml  gen-cxx.bat
opaque_rust/src/: lib.rs
src/: example-class.cpp  example-rust.cpp  opaque++.cpp  opaque++.h  opaque-rust.cpp  opaque-rust.h  setup-generator.cpp
tests/: CMakeLists.txt  test_opaque.cpp
